@@ -3,8 +3,10 @@ udpkg (0.020) UNRELEASED; urgency=low
   * Petter Reinholdtsen
     - Report arch 'sparc' instead of 'sparc64' on UltraSparc.
       Patch from Thomas Poindessous. (Closes: #227851)
+  * Bastian Blank
+    - Remove runtime detection of debian architecture.
 
- -- Petter Reinholdtsen <pere@debian.org>  Thu, 22 Jan 2004 17:54:44 +0100
+ -- Bastian Blank <waldi@debian.org>  Sat, 24 Jan 2004 18:57:24 +0100
 
 udpkg (0.019) unstable; urgency=low
 
